--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -74,3 +74,11 @@ $susy: (
 @import "archive";
 @import "sidebar";
 @import "print";
+
+
+
+/*
+   Code highlighting
+   ========================================================================== */
+
+@import url('zenburnc.css');
