added onfont include

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -25,6 +25,9 @@
 /* Font Awesome - icon font set */
 @import "vendor/font-awesome/font-awesome";
 
+/* Fonts */
+@import "onfont";
+
 /* Magnific Popup - responsive lightbox */
 @import "vendor/magnific-popup/magnific-popup"; // Magnific Popup
 
