--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,17 +3,17 @@
     {% if site.data.ui-text[site.locale].follow_label %}
       <li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li>
     {% endif %}
-    {% if site.twitter %}
-      <li><a href="https://twitter.com/{{ site.twitter }}" target="_blank"><i class="fa fa-fw fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
+    {% if site.author.twitter %}
+      <li><a href="https://twitter.com/{{ site.author.twitter }}" target="_blank"><i class="fa fa-fw fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
     {% endif %}
-    {% if site.facebook %}
-      <li><a href="https://facebook.com/{{ site.facebook }}" target="_blank"><i class="fa fa-fw fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
+    {% if site.author.facebook %}
+      <li><a href="https://facebook.com/{{ site.author.facebook }}" target="_blank"><i class="fa fa-fw fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
     {% endif %}
-    {% if site.github %}
-      <li><a href="https://github.com/{{ site.github }}" target="_blank"><i class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub</a></li>
+    {% if site.author.github %}
+      <li><a href="https://github.com/{{ site.author.github }}" target="_blank"><i class="fa fa-fw fa-github" aria-hidden="true"></i> GitHub</a></li>
     {% endif %}
-    {% if site.bitbucket %}
-      <li><a href="https://bitbucket.org/{{ site.bitbucket }}" target="_blank"><i class="fa fa-fw fa-bitbucket" aria-hidden="true"></i> Bitbucket</a></li>
+    {% if site.author.bitbucket %}
+      <li><a href="https://bitbucket.org/{{ site.author.bitbucket }}" target="_blank"><i class="fa fa-fw fa-bitbucket" aria-hidden="true"></i> Bitbucket</a></li>
     {% endif %}
     <li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | absolute_url }}{% endif %}"><i class="fa fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a></li>
   </ul>
