realized main.css w/o includes

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -84,4 +84,4 @@ $susy: (
    Code highlighting
    ========================================================================== */
 
-@import url('zenburnc.css');
+@import "zenburnc";
