styling netlify logo

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -44,6 +44,12 @@
   .fa {
     color: mix(#fff, $gray, 25%);
   }
+
+  .logo-netlify {
+    padding-left: 30px;
+    width: 9%;
+    height: 9%;
+  }
 }
 
 .page__footer-copyright {
