more netlify style

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -50,6 +50,10 @@
     width: 9%;
     height: 9%;
   }
+  .logo-netlify img {
+    border: 1px solid #bdc1c4;
+    border-radius: 4px;
+  }
 }
 
 .page__footer-copyright {
