--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -30,7 +30,8 @@
 
     .page__content,
     .page__meta,
-    .page__share {
+    .page__share,
+    .page__excerpt {
       @include full();
     }
   }
@@ -253,6 +254,24 @@
   margin-bottom: 10px;
   font-size: $type-size-6;
   text-transform: uppercase;
+}
+
+/*
+   Page excerpt
+   ========================================================================== */
+
+.page__excerpt {
+  margin-top: 1em;
+  font-family: $sans-serif;
+  font-size: $type-size-6;
+
+  p {
+    margin: 0;
+  }
+
+  a {
+    color: inherit;
+  }
 }
 
 
