provide config var for truncating excerpt word length

--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -10,6 +10,12 @@
   {% assign title = post.title %}
 {% endif %}
 
+{% if site.truncatewords %}
+  {% assign truncw = site.truncatewords %}
+{% else %}
+  {% assign truncw = 80 %}
+{% endif %}
+
 <div class="{{ include.type | default: "list" }}__item">
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
     {% if include.type == "grid" and teaser %}
@@ -33,7 +39,7 @@
     {% if post.read_time %}
       <p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %}
-    {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>{% endif %}
+    {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncatewords: truncw }}</p>{% endif %}
   </article>
   <footer class="page__meta">
   {% if post.modified %}
