--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -23,11 +23,11 @@
             {% assign comments = site.data.comments[page.slug] | sort %}
 
             {% for comment in comments %}
-              {% assign email = comment[1].email %}
-              {% assign name = comment[1].name %}
-              {% assign url = comment[1].url %}
-              {% assign date = comment[1].date %}
-              {% assign message = comment[1].message %}
+              {% assign email = comment.email %}
+              {% assign name = comment.name %}
+              {% assign url = comment.url %}
+              {% assign date = comment.date %}
+              {% assign message = comment.message %}
               {% include comment.html index=forloop.index email=email name=name url=url date=date message=message %}
             {% endfor %}
           {% endif %}
@@ -37,7 +37,7 @@
         <!-- Start new comment form -->
         <h4 class="page__comments-title">{{ site.data.ui-text[site.locale].comments_label | default: "Leave a Comment" }}</h4>
         <p class="small">{{ site.data.ui-text[site.locale].comment_form_info | default: "Your email address will not be published. Required fields are marked" }} <span class="required">*</span></p>
-        <form id="new_comment" class="page__comments-form js-form form" method="post" action="https://api.staticman.net/v1/entry/{{ site.repository }}/{{ site.staticman.branch }}">
+        <form id="new_comment" class="page__comments-form js-form form" method="post" action="https://api.staticman.net/v2/entry/{{ site.repository }}/{{ site.staticman.branch }}/comments">
           <div class="form__spinner">
             <i class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
             <span class="sr-only">{{ site.data.ui-text[site.locale].loading_label | default: "Loading..." }}</span>
