--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -61,6 +61,7 @@ $dark-gray                  : mix(#000, $gray, 40%) !default;
 $darker-gray                : mix(#000, $gray, 60%) !default;
 $light-gray                 : mix(#fff, $gray, 50%) !default;
 $lighter-gray               : mix(#fff, $gray, 90%) !default;
+$lightest-gray              : mix(#fff, $gray, 93%) !default;
 
 $title-color                : #225072 !default;
 $body-color                 : #fff !default;
