more comment styles

--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -92,7 +92,7 @@ select {
   margin-bottom: 0.5em;
   color: $text-color;
   background-color: #fff;
-  border: 1px solid mix(#fff, #000, 80%);
+  border: 1px solid #fff;
   border-radius: $border-radius;
   box-shadow: none;
 
