--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -44,8 +44,8 @@
 
         <!-- Start new comment form -->
         <div id="respond">
-        <h2 class="page__comments-title">{{ site.data.ui-text[site.locale].comments_label | default: "Leave a Comment" }} <small><a rel="nofollow" id="cancel-comment-reply-link" href="{{ page.url | absolute_url }}#respond" style="display:none;">{{ site.data.ui-text[site.locale].comment_cancel_reply | default: "Cancel reply" }}</a></small></h2>
-        <p class="small">{{ site.data.ui-text[site.locale].comment_form_info_email | default: "Your email address will not be published." }}</p>
+        <h2 class="page__comments-title">{{ site.data.ui-text[site.locale].comments_label | default: "Leave a Comment" }} <small class="comment-form-cancel-comment"><a rel="nofollow" id="cancel-comment-reply-link" href="{{ page.url | absolute_url }}#respond" style="display:none;">{{ site.data.ui-text[site.locale].comment_cancel_reply | default: "Cancel reply" }}</a></small></h2>
+        <p class="small"></p>
         <form id="comment-form" class="page__comments-form js-form form" method="post" action="https://api.staticman.net/v2/entry/{{ site.repository }}/{{ site.staticman.branch }}/comments">
           <div class="form__spinner">
             <i class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
@@ -61,7 +61,7 @@
             <input type="text" id="comment-form-name" name="fields[name]" tabindex="2" />
           </fieldset>
           <fieldset>
-            <label for="comment-form-email"><span class="label-required">{{ site.data.ui-text[site.locale].comment_form_email_label | default: "Email address" }}</span></label>
+            <label for="comment-form-email"><span class="label-required">{{ site.data.ui-text[site.locale].comment_form_email_label | default: "Email" }}</span>  <small>({{ site.data.ui-text[site.locale].comment_form_info_email2 | default: "used for <a href='http://gravatar.com'>Gravatar</a> image and reply notifications" }})</small></label>
             <input type="email" id="comment-form-email" name="fields[email]" tabindex="3" />
           </fieldset>
           <fieldset>
