--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -324,11 +324,15 @@
   padding-top: 2rem;
   font-size: $type-size-4;
   border-top: 1px solid $border-color;
+
+  .comment-form-cancel-comment {
+    font-size: $type-size-8;
+  }
 }
 
 .page__comments-form {
   padding: 1em;
-  background: $lightest-gray;
+  background: $lighter-gray;
   -webkit-transition: $global-transition;
   transition: $global-transition;
   border: 1px solid #bdc1c4;
