--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -73,7 +73,7 @@ $border-color               : $lighter-gray !default;
 
 $primary-color              : #7a8288 !default;
 $success-color              : #62c462 !default;
-$warning-color              : #f89406 !default;
+$warning-color              : #c3284d !default;
 $danger-color               : #ee5f5b !default;
 $info-color                 : #52adc8 !default;
 
