--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -74,6 +74,7 @@ $susy: (
    ========================================================================== */
 
 @import "page";
+@import "comments";
 @import "archive";
 @import "sidebar";
 @import "print";
