--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -44,7 +44,7 @@
 
         <!-- Start new comment form -->
         <div id="respond">
-        <h2 class="page__comments-title">{{ site.data.ui-text[site.locale].comments_label | default: "Leave a Comment" }} <small class="comment-form-cancel-comment"><a rel="nofollow" id="cancel-comment-reply-link" href="{{ page.url | absolute_url }}#respond" style="display:none;">{{ site.data.ui-text[site.locale].comment_cancel_reply | default: "Cancel reply" }}</a></small></h2>
+        <h2 id="respond-head" class="page__comments-title">{{ site.data.ui-text[site.locale].comments_label | default: "Leave a Comment" }} <small class="comment-form-cancel-comment"><a rel="nofollow" id="cancel-comment-reply-link" href="{{ page.url | absolute_url }}#respond" style="display:none;">{{ site.data.ui-text[site.locale].comment_cancel_reply | default: "Cancel reply" }}</a></small></h2>
         <p class="small"></p>
         <form id="comment-form" class="page__comments-form js-form form" method="post" action="https://api.staticman.net/v2/entry/{{ site.repository }}/{{ site.staticman.branch }}/comments">
           <div class="form__spinner">
@@ -69,7 +69,6 @@
             <input type="url" id="comment-form-url" name="fields[url]" tabindex="4"/>
           </fieldset>
           <fieldset class="hidden" style="display: none;">
-            <input type="hidden" name="options[slug]" value="{{ page.slug }}">
             <input type="hidden" name="options[origin]" value="{{ page.url | absolute_url }}">
             <input type="hidden" name="options[parent]" value="{{ page.url | absolute_url }}">
             <input type="hidden" id="comment-replying-to" name="fields[replying_to]" value="">
