--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -111,6 +111,7 @@ $masthead-link-color-hover  : mix(#000, $primary-color, 25%) !default;
    Breakpoints
    ========================================================================== */
 
+$x-small                    : 420px !default;
 $small                      : 600px !default;
 $medium                     : 768px !default;
 $medium-wide                : 900px !default;
