--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -43,9 +43,9 @@
         <!-- End static comments -->
 
         <!-- Start new comment form -->
+        {% unless page.comments_locked == true %}
         <div id="respond">
         <h2 id="respond-head" class="page__comments-title">{{ site.data.ui-text[site.locale].comments_label | default: "Leave a Comment" }} <small class="comment-form-cancel-comment"><a rel="nofollow" id="cancel-comment-reply-link" href="{{ page.url | absolute_url }}#respond" style="display:none;">{{ site.data.ui-text[site.locale].comment_cancel_reply | default: "Cancel reply" }}</a></small></h2>
-        <p class="small"></p>
         <form id="comment-form" class="page__comments-form js-form form" method="post" action="https://api.staticman.net/v2/entry/{{ site.repository }}/{{ site.staticman.branch }}/comments">
           <div class="form__spinner">
             <i class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
@@ -84,10 +84,14 @@
           </p>
           <!-- End comment form alert messaging -->
           <fieldset>
+            <div class="g-recaptcha" data-sitekey="{{ site.reCaptcha.siteKey }}"></div>
             <button type="submit" id="comment-form-submit" tabindex="5" class="btn">{{ site.data.ui-text[site.locale].comment_btn_submit | default: "Submit Comment" }}</button>
           </fieldset>
         </form>
         </div>
+        {% else %}
+          <p><em>Die Kommentare sind geschlossen. Bei Fragen zum Inhalt der Seite gern unter <a href="{{ site.url }}/kontakt/">Kontakt</a>.</em></p>
+        {% endunless %}
         <!-- End new comment form -->
       {% endif %}
     </section>
