--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -32,6 +32,15 @@
   }
 }
 
+.layout--home {
+  .page__title {
+    margin: 0;
+  }
+  .archive__subtitle {
+    margin: 0.3em 0 0;
+  }
+}
+
 .archive__item-title {
   margin-bottom: 0.25em;
   font-family: $sans-serif-narrow;
