changed comment folder name because of post file name change

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -90,7 +90,7 @@
         </form>
         </div>
         {% else %}
-          <p><em>Die Kommentare sind geschlossen. Bei Fragen zum Inhalt der Seite gern unter <a href="{{ site.url }}/kontakt/">Kontakt</a>.</em></p>
+          <p><em>Die Kommentare sind geschlossen. Bei Fragen zum Inhalt der Seite gern unter <a href="{{ site.url }}/kontakt/">Kontakt</a> melden.</em></p>
         {% endunless %}
         <!-- End new comment form -->
       {% endif %}
