--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -545,6 +545,7 @@
   li ul > li a {
     padding-left: 2rem;
     font-weight: normal;
+    font-size: $type-size-8;
   }
 
   /* hide sub sub links on small screens*/
