--- a/_sass/_comments.scss
+++ b/_sass/_comments.scss
@@ -180,3 +180,9 @@
   margin-bottom: 0.2em;
 }
 
+input[type=checkbox].comment-reply-checkbox {
+    display: inline;
+    margin-right: .5em;
+    width: auto;
+}
+
