tox open/close toggle

--- a/_sass/_toc.scss
+++ b/_sass/_toc.scss
@@ -20,6 +20,13 @@
     &:hover {
       border-color: #333;
     }
+
+    &:before, &:after {
+      -webkit-transform-origin: 50% 50%;
+          -ms-transform-origin: 50% 50%;
+              transform-origin: 50% 50%;
+      top: 0;
+    }
   }
 
   .nav__title {
