--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -137,3 +137,9 @@ $box-shadow                 : 0 1px 1px rgba(0, 0, 0, 0.125) !default;
 $navicon-width              : 1.5rem !default;
 $navicon-height             : 0.25rem !default;
 $global-transition          : all 0.2s ease-in-out !default;
+
+
+$main-margin-top-wbc        : 2em !default;
+$hero-margin-bottom-wbc     : 1.5em !default;
+$main-margin-top-wobc       : 3em !default;
+$hero-margin-bottom-wobc    : 2em !default;
