--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
+<a id="scroll-top-button" class="btn btn--inverse" href="#top"><i class="fa fa-rocket" aria-hidden="true"></i></a>
+
 <div class="page__footer-follow">
   <ul class="social-icons">
     {% if site.data.ui-text[site.locale].follow_label %}
