--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -5,7 +5,7 @@
 #main {
   @include container;
   @include clearfix;
-  margin-top: 3em;
+  margin-top: $main-margin-top-wobc;
   padding-left: 1em;
   padding-right: 1em;
   -webkit-animation: intro 0.3s both;
@@ -16,6 +16,10 @@
   @include breakpoint($x-large) {
     max-width: $x-large;
   }
+}
+
+.layout--home #main {
+  margin-top: $main-margin-top-wobc;
 }
 
 .page {
@@ -113,7 +117,7 @@
 
 .page__hero {
   position: relative;
-  margin-bottom: 2em;
+  margin-bottom: $hero-margin-bottom-wobc;
   @include clearfix;
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
@@ -166,6 +170,10 @@
       }
     }
   }
+}
+
+.layout--home .page__hero {
+  margin-bottom: $hero-margin-bottom-wobc;
 }
 
 .page__hero-image {
