--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,7 +1,20 @@
 <!-- start custom head snippets -->
 
 <!-- insert favicons. use http://realfavicongenerator.net/ -->
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" href="/assets/images/favicon/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="/assets/images/favicon/favicon-194x194.png" sizes="194x194">
+<link rel="icon" type="image/png" href="/assets/images/favicon/android-chrome-192x192.png" sizes="192x192">
+<link rel="icon" type="image/png" href="/assets/images/favicon/favicon-16x16.png" sizes="16x16">
+<link rel="manifest" href="/assets/images/favicon/manifest.json">
+<link rel="mask-icon" href="/assets/images/favicon/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/assets/images/favicon/favicon.ico">
+<meta name="msapplication-TileColor" content="#dedede">
+<meta name="msapplication-TileImage" content="/assets/images/favicon/mstile-144x144.png">
+<meta name="msapplication-config" content="/assets/images/favicon/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
 
+<!-- insert piwik. -->
 {% if site.analytics.provider and page.analytics != false %}
 {% case site.analytics.provider %}
 {% when "piwik" %}
@@ -9,6 +22,7 @@
 {% endcase %}
 {% endif %}
 
+<!-- insert google recaptcha. -->
 {% if site.reCaptcha.siteKey %}
 	<script src='https://www.google.com/recaptcha/api.js'></script>
 {% endif %}
