--- a/_includes/rnb__header.html
+++ b/_includes/rnb__header.html
@@ -1,4 +1,4 @@
-<div class="container-fluid main-container">
+<div class="container-fluid main-container rnb-container">
 
 <!-- tabsets -->
 <script>
