--- a/_sass/_rnb.scss
+++ b/_sass/_rnb.scss
@@ -1,5 +1,6 @@
 .rnb-container {
 	.btn-group {
+		margin-top: 2.8em;
 		.dropdown-menu {
 			    -webkit-box-shadow: none;
     			box-shadow: none;
