--- a/_sass/_rnb.scss
+++ b/_sass/_rnb.scss
@@ -1,9 +1,15 @@
 .rnb-container {
 	.btn-group {
-		margin-top: 2.8em;
+		margin-top: 2.1em;
+		border: 1px solid #f2f3f3;
+
+		@include breakpoint($large) {
+			margin-top: 2.8em;
+		}
+
 		.dropdown-menu {
-			    -webkit-box-shadow: none;
-    			box-shadow: none;
+			-webkit-box-shadow: none;
+    		box-shadow: none;
 		}
 		ul.dropdown-menu li {
 		    margin-bottom: 0;
