added jekyll-seo-tag url

--- a/_includes/head/seo-tag.html
+++ b/_includes/head/seo-tag.html
@@ -1,5 +1,8 @@
 
-<!-- Begin Jekyll SEO tag v2.2.0 --> 
+<!--
+Begin Jekyll SEO tag v2.2.0
+see https://github.com/jekyll/jekyll-seo-tag/ for usage instructions
+-->
 
 {% if page.url == "/" or page.url == "/about/" %}
   {% assign seo_homepage_or_about = true %}
