--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -27,8 +27,20 @@ layout: default
       {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
           {% if page.title %}<h1 class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endif %}
-          {% if page.read_time %}
-            <p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
+          {% if page.read_time or page.last_modified_at or page.date %}
+            <p class="page__meta">
+            {% if page.last_modified_at %}
+              <i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Updated:" }}<time datetime="{{ page.last_modified_at | date: "%Y-%m-%d" }}">{{ page.last_modified_at | date: "%B %d, %Y" }}</time>
+            {% elsif page.date %}
+              <i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Updated:" }} <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time>
+            {% endif %}
+            {% if page.read_time %}
+              <i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}
+            {% endif %}
+            {% if page.read_time %}
+              <i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}
+            {% endif %}
+            </p>
           {% endif %}
           {% if page.excerpt %}
             <p class="page__excerpt">{{ page.excerpt | markdownify | remove: "<p>" | remove: "</p>" }}</p>
