styles for caption and other

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -61,11 +61,6 @@ p {
   margin-bottom: 0.7em;
 }
 
-.page__content strong {
-  border-bottom: 2px dotted #000;
-  font-weight: normal;
-}
-
 u,
 ins {
   text-decoration: none;
@@ -244,7 +239,7 @@ figcaption {
   margin-bottom: 0.5em;
   color: mix(#fff, $text-color, 25%);
   font-family: $caption-font-family;
-  font-size: $type-size-6;
+  font-size: $type-size-65emb;
 
   a {
     color: inherit;
