--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -125,11 +125,13 @@ body:hover .visually-hidden button {
 /* image align left */
 
 .align-left {
+  width: 100%;
   display: block;
   margin-left: auto;
   margin-right: auto;
 
   @include breakpoint($small) {
+    width: $image-text-width;
     float: left;
     margin-right: 1em;
   }
@@ -138,11 +140,13 @@ body:hover .visually-hidden button {
 /* image align right */
 
 .align-right {
+  width: 100%;
   display: block;
   margin-left: auto;
   margin-right: auto;
 
   @include breakpoint($small) {
+    width: $image-text-width;
     float: right;
     margin-left: 1em;
   }
