--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -514,6 +514,10 @@
     background: $primary-color;
     border-top-left-radius: $border-radius;
     border-top-right-radius: $border-radius;
+
+    i {
+      border-bottom: none;
+    }
   }
 }
 
