no image outline on focus for gallery pics

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -116,6 +116,10 @@ a {
     @extend %tab-focus;
   }
 
+  &.image-popup:focus {
+    outline: none;
+  }
+
   &:hover,
   &:active {
     outline: 0;
