fix path after mm update 4.4.0

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,7 +12,7 @@
    Base
    ========================================================================== */
 
-@import "utilities";
+@import "minimal-mistakes/utilities";
 
 /*
    Layout specific
