--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -20,7 +20,7 @@
   <div class="comment__timestamp">
     {% if include.date %}
       {% if include.index %}<a href="#comment{% if r %}{{ index | prepend: '-' }}{% else %}{{ include.index | prepend: '-' }}{% endif %}" title="Permalink to this comment">{% endif %}
-      <time datetime="{{ include.date | date_to_xmlschema }}">{{ include.date | localize: '%d. %B %Y' }}</time>
+      <time datetime="{{ include.date | date_to_xmlschema }}">{{ include.date | localize: "%d. %B %Y" }}</time>
       {% if include.index %}</a>{% endif %}
     {% endif %}
   </div>
