--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -36,8 +36,15 @@
         <a href="{{ post.url | absolute_url }}" rel="permalink">{{ title }}</a>
       {% endif %}
     </h2>
-    {% if post.read_time %}
-      <p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
+    {% if post.read_time or site.data.comments[page.slug].size > 0 %}
+      <p class="page__meta">
+      {% if post.read_time %}
+        <i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}
+      {% endif %}
+      {% if site.data.comments[post.slug].size > 0 %}
+        <i class="fa fa-commenting-o"></i> <a href="#comments" class="page__meta-comments">{{ site.data.comments[post.slug] | size }} Kommentar{% if site.data.comments[post.slug].size > 1 %}e{% endif %}</a>
+      {% endif %}
+      </p>
     {% endif %}
     {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncatewords: truncw }}</p>{% endif %}
   </article>
