--- a/_layouts/single-rnb.html
+++ b/_layouts/single-rnb.html
@@ -37,6 +37,9 @@ layout: default-rnb
             {% if page.read_time %}
               <i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}
             {% endif %}
+            {% if site.data.comments[page.slug].size > 0 %}
+              <i class="fa fa-commenting-o"></i> <a href="#comments" class="page__meta-comments">{{ site.data.comments[page.slug] | size }} Kommentar{% if site.data.comments[page.slug].size > 1 %}e{% endif %}</a>
+            {% endif %}
             </p>
           {% endif %}
           {% if page.excerpt %}
