--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -265,11 +265,14 @@
 
   a {
     color: inherit;
+    text-decoration: none;
   }
 
   i:nth-child(n + 2) {
     margin-left: 1em;
   }
+
+
 }
 
 .page__meta-title {
