--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -17,10 +17,12 @@ $serif                      : "GoudyBookletter1911Regular", Georgia, Times, seri
 $sans-serif                 : "SuperGroteskA", "Lato", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
 $monospace                  : "Hack", "Lucida Console", monospace !default;
 $caption                    : "SuperGroteskA", "Lato", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
+$citation                   : "Montserrat", "Lato", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
 
 /* sans serif typefaces */
 $sans-serif-narrow          : $sans-serif !default;
 $supergrotesk               : "SuperGroteskA", sans-serif !default;
+$montserrat                 : "Montserrat", sans-serif !default;
 $helvetica                  : Helvetica, "Helvetica Neue", Arial, sans-serif !default;
 
 /* serif typefaces */
