--- a/_includes/page__related.html
+++ b/_includes/page__related.html
@@ -7,8 +7,8 @@
         {% if post.tags contains this_tag %}
           {% if n_posts == 0 %}
             <div class="page__related">
-              {% if site.data.ui-text[site.locale].related_label %}
-                <h4 class="page__related-title">{{ site.data.ui-text[site.locale].related_label | default: "You May Also Enjoy" }}</h4>
+              {% if site.data.ui-text[site.locale].related_posts %}
+                <h4 class="page__related-title">{{ site.data.ui-text[site.locale].related_posts | default: "Related posts" }}</h4>
               {% endif %}
               <div class="grid__wrapper">
           {% endif %}
