--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -337,9 +337,15 @@
 .page__related {
   margin-top: 2em;
   padding-top: 1em;
+  font-size: 64%;
   border-top: 1px solid $border-color;
   @include clearfix();
   float: left;
+
+  .archive__item-excerpt {
+    font-family: $sans-serif;
+    font-size: 125% !important;
+  }
 
   @include breakpoint($large) {
     @include pre(2.5 of 12);
