--- a/_layouts/archive-taxonomy.html
+++ b/_layouts/archive-taxonomy.html
@@ -1,13 +1,19 @@
 ---
 layout: default
-author_profile: false
 ---
+
+{% assign header_pre = "" %}
+{% if page.type == "tag" %}
+  {% assign header_pre = "Getagged mit " %}
+{% else %}
+  {% assign header_pre = "Kategorisiert in " %}
+{% endif %}
 
 <div id="main" role="main">
   {% include sidebar.html %}
 
   <div class="archive">
-    <h1 class="page__title">{{ page.title }}</h1>
+    <h1 class="page__title">{{ header_pre }} „{{ page.title }}“</h1>
     {% for post in page.posts %}
       {% include archive-single.html %}
     {% endfor %}
