--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -18,6 +18,14 @@
     color: inherit;
     text-decoration: none;
   }
+
+  .tag__list a {
+    color: $info-color;
+  }
+
+  ul.tag__list li:hover {
+    list-style-type: circle;
+  }
 }
 
 .archive__subtitle {
