--- a/_includes/category-list.html
+++ b/_includes/category-list.html
@@ -14,7 +14,7 @@
   {% assign category_hashes = (page_categories | split: ',' | sort:0) %}
 
   <p class="page__taxonomy">
-    <strong><i class="fa fa-fw fa-folder-open" aria-hidden="true"></i> <a href="/categories/">{{ site.data.ui-text[site.locale].categories_label | default: "Categories:" }}</a> </strong>
+    <strong><i class="fa fa-fw fa-folder-open" aria-hidden="true"></i> <a href="/categories/" title="Kategorie Index">{{ site.data.ui-text[site.locale].categories_label | default: "Categories:" }}</a> </strong>
     <span itemprop="keywords">
     {% for hash in category_hashes %}
       {% assign keyValue = hash | split: '#' %}
