--- a/_sass/minimal-mistakes/_syntax.scss
+++ b/_sass/minimal-mistakes/_syntax.scss
@@ -8,7 +8,7 @@ figure.highlight {
   position: relative;
   margin-bottom: 1em;
   font-family: $monospace;
-  font-size: $type-size-65;
+  font-size: $type-size-65emb;
   line-height: 1.8;
   border: 1px solid $border-color;
   border-radius: $border-radius;
