--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -63,7 +63,7 @@
   @include full();
   @include clearfix();
   margin-top: 1em;
-  padding-top: 1em;
+  padding-top: 2em;
 
   ul {
     margin: 0;
@@ -165,11 +165,15 @@
 .page__content + .pagination,
 .page__meta + .pagination,
 .page__share + .pagination,
-.page__comments + .pagination {
+.page__comments + .pagination,
+.archive__taxonomy + .pagination  {
   padding-top: 2em;
   border-top: 1px solid $border-color;
 }
 
+.archive__taxonomy_header_small {
+  font-size: $type-size-9;
+}
 
 /*
    Priority plus navigation
