--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -54,6 +54,7 @@ $type-size-65               : 0.9em !default;   // ~12px
 $type-size-65emb            : 0.8em !default;   // ~12px
 $type-size-7                : 0.6875em !default; // ~11px
 $type-size-8                : 0.625em !default;  // ~10px
+$type-size-9                : 0.4em !default;  // ~8px
 
 
 /*
