--- a/_includes/head/rnb_scripts.html
+++ b/_includes/head/rnb_scripts.html
@@ -113,6 +113,13 @@ button.code-folding-btn:focus {
 body {
 	font-size: inherit;
 }
+a {
+	color: #52adc8 !important;
+}
+a:hover {
+	color: #52adc8 !important;
+	text-decoration: underline;
+}
 .container-fluid {
 	padding: 0;
 }
