--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -73,7 +73,12 @@
     font-weight: normal;
   }
   em, i {
-    border-bottom: 2px dashed $text-color;
+    background-image: linear-gradient(rgba($decoration-color,0.5), rgba($decoration-color,0.5));
+    background-size: 1em 0.2em;
+    background-position: 0em 0.95em;
+    padding-bottom: 0.3em;
+    background-repeat: repeat-x;
+    text-decoration: none;
     font-style: normal;
   }
 
