style for links on rnb pages

--- a/_includes/head/rnb_scripts.html
+++ b/_includes/head/rnb_scripts.html
@@ -113,10 +113,10 @@ button.code-folding-btn:focus {
 body {
 	font-size: inherit;
 }
-a {
+.page__content a {
 	color: #52adc8 !important;
 }
-a:hover {
+.page__content a:hover {
 	color: #52adc8 !important;
 	text-decoration: underline;
 }
