--- a/_includes/head/rnb_scripts.html
+++ b/_includes/head/rnb_scripts.html
@@ -113,10 +113,10 @@ button.code-folding-btn:focus {
 body {
 	font-size: inherit;
 }
-.page__content a {
+.page__content p a {
 	color: #52adc8 !important;
 }
-.page__content a:hover {
+.page__content p a:hover {
 	color: #52adc8 !important;
 	text-decoration: underline;
 }
