--- a/_sass/_toc.scss
+++ b/_sass/_toc.scss
@@ -29,6 +29,8 @@
 
     i.fa {
       font-weight: 100;
+
+      /* wegen border bottom für em und i: style nicht auf anberes anmieten */
       background: none;
       padding-bottom: 0;
 
