--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -64,9 +64,11 @@ $type-size-9                : 0.4em !default;  // ~8px
 $gray                       : #7a8288 !default;
 $dark-gray                  : mix(#000, $gray, 40%) !default;
 $darker-gray                : mix(#000, $gray, 60%) !default;
+$middle-gray                : mix(#fff, $gray, 25%) !default;
 $light-gray                 : mix(#fff, $gray, 50%) !default;
 $lighter-gray               : mix(#fff, $gray, 90%) !default;
 $lightest-gray              : mix(#fff, $gray, 93%) !default;
+
 
 $title-color                : #225072 !default;
 $body-color                 : #fff !default;
